[gd_scene load_steps=10 format=3 uid="uid://vvs7yyuia6n8"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_6gg47"]
[ext_resource type="PackedScene" uid="uid://ct8tdw87yo47l" path="res://Scenes/P1.tscn" id="1_lnst7"]
[ext_resource type="PackedScene" uid="uid://mrd0eiiwbamr" path="res://Scenes/P2and3.tscn" id="2_ecb25"]

[sub_resource type="Gradient" id="Gradient_wq0g2"]
offsets = PackedFloat32Array(0.149457, 0.353261, 0.592391, 1)
colors = PackedColorArray(1, 0, 0, 1, 0.898258, 0.829317, 0, 1, 0.254902, 1, 0.211765, 1, 0, 0.87451, 1, 1)

[sub_resource type="Curve" id="Curve_bdo75"]
max_value = 1.5
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.202202, 1.26506), -1.61544, -1.61544, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Environment" id="Environment_8d8nd"]
background_mode = 3
background_canvas_max_layer = 1
glow_enabled = true
glow_intensity = 1.0
glow_strength = 0.95
glow_blend_mode = 0
glow_hdr_threshold = 0.2
glow_hdr_scale = 2.4

[sub_resource type="StyleBoxLine" id="StyleBoxLine_42m8f"]
color = Color(0.6, 0.6, 0.6, 1)
thickness = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p14sg"]
content_margin_left = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xhgu7"]
content_margin_left = 5.0
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Node" type="Node"]
script = ExtResource("1_6gg47")
timeBarGradient = SubResource("Gradient_wq0g2")
progressAlertColor = Color(1, 0.592157, 0.533333, 1)
heartCurve = SubResource("Curve_bdo75")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_8d8nd")

[node name="P1" type="Window" parent="."]
title = "Player 1"
position = Vector2i(0, 36)
size = Vector2i(1920, 1080)

[node name="P1" parent="P1" instance=ExtResource("1_lnst7")]

[node name="P2" type="Window" parent="."]
title = "Player 2"
position = Vector2i(0, 36)
size = Vector2i(1920, 1080)

[node name="P2" parent="P2" instance=ExtResource("2_ecb25")]
player = 1

[node name="P3" type="Window" parent="."]
title = "Player 3"
position = Vector2i(0, 36)
size = Vector2i(1920, 1080)

[node name="P3" parent="P3" instance=ExtResource("2_ecb25")]
player = 2

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Reset" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.02
anchor_right = 0.126
anchor_bottom = 0.085
offset_left = -0.128
offset_top = 0.039999
offset_right = -0.152008
offset_bottom = -0.0800018
focus_mode = 0
text = "Reset"

[node name="ToggleGame" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.096
anchor_right = 0.126
anchor_bottom = 0.16
offset_left = -0.128
offset_top = -0.208
offset_right = -0.152008
offset_bottom = 0.319992
focus_mode = 0
text = "Start/Pause"

[node name="SolvePuzzle" type="Button" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.014
anchor_top = 0.096
anchor_right = 0.126
anchor_bottom = 0.16
offset_left = -0.128
offset_top = 48.792
offset_right = -0.152008
offset_bottom = 49.32
focus_mode = 0
text = "Solve Current"

[node name="Info" type="RichTextLabel" parent="Control"]
layout_mode = 0
offset_left = 185.0
offset_top = 15.0
offset_right = 660.0
offset_bottom = 142.0
bbcode_enabled = true
text = "[b]Current level:[/b] 1
[b]Game:[/b] running
[b]Counter:[/b] 5:00
[b]Current Health:[/b] 3"

[node name="Logs" type="PanelContainer" parent="Control"]
layout_mode = 2
offset_top = 185.0
offset_right = 1150.0
offset_bottom = 645.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MainContainer" type="VBoxContainer" parent="Control/Logs"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Titles" type="HBoxContainer" parent="Control/Logs/MainContainer"]
layout_mode = 2

[node name="Label5" type="RichTextLabel" parent="Control/Logs/MainContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Number"
fit_content = true

[node name="Label6" type="RichTextLabel" parent="Control/Logs/MainContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Difficulty"
fit_content = true

[node name="Label" type="RichTextLabel" parent="Control/Logs/MainContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Index"
fit_content = true

[node name="Label2" type="RichTextLabel" parent="Control/Logs/MainContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Time"
fit_content = true

[node name="Label3" type="RichTextLabel" parent="Control/Logs/MainContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Errors"
fit_content = true

[node name="Label4" type="RichTextLabel" parent="Control/Logs/MainContainer/Titles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "Completed"
fit_content = true

[node name="MainSeparator" type="HSeparator" parent="Control/Logs/MainContainer"]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxLine_42m8f")

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Logs/MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Logs/MainContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="placeholder" type="HBoxContainer" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="number" type="RichTextLabel" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_p14sg")
bbcode_enabled = true
text = "1"
fit_content = true

[node name="diff" type="RichTextLabel" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_p14sg")
bbcode_enabled = true
text = "1"
fit_content = true

[node name="index" type="RichTextLabel" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_p14sg")
bbcode_enabled = true
text = "O2"
fit_content = true

[node name="time" type="RichTextLabel" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_xhgu7")
bbcode_enabled = true
text = "02:41"
fit_content = true

[node name="bar" type="ColorRect" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder/time"]
z_index = -1
layout_mode = 0
offset_right = 189.0
offset_bottom = 26.0
color = Color(0, 1, 0.133333, 1)

[node name="errors" type="RichTextLabel" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_p14sg")
bbcode_enabled = true
text = "2"
fit_content = true

[node name="completed" type="RichTextLabel" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer/placeholder"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/normal_font_size = 17
theme_override_styles/normal = SubResource("StyleBoxFlat_p14sg")
bbcode_enabled = true
text = "yes"
fit_content = true

[node name="placeholderSeparator" type="HSeparator" parent="Control/Logs/MainContainer/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[connection signal="pressed" from="Control/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Control/ToggleGame" to="." method="_on_toggle_game_pressed"]
[connection signal="pressed" from="Control/SolvePuzzle" to="." method="_on_solve_puzzle_pressed"]
